exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }>
  <Image
    source={
      Object {
        "uri": "http://google.com",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 27,
          "height": 54,
          "width": 54,
        },
        Object {
          "marginRight": 6,
        },
      ]
    } />
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "column",
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#807F7F",
            "fontSize": 15,
          },
        ]
      }>
      Você
       pediu um(a)
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#807F7F",
          },
        ]
      }>
      bar
    </Text>
  </View>
</View>
`;

exports[`test renders user name when is not currentUser 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }>
  <Image
    source={
      Object {
        "uri": "http://google.com",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 27,
          "height": 54,
          "width": 54,
        },
        Object {
          "marginRight": 6,
        },
      ]
    } />
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "column",
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#807F7F",
            "fontSize": 15,
          },
        ]
      }>
      foo
       pediu um(a)
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#807F7F",
          },
        ]
      }>
      bar
    </Text>
  </View>
</View>
`;

exports[`test truncates the name 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }>
  <Image
    source={
      Object {
        "uri": "http://google.com",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 27,
          "height": 54,
          "width": 54,
        },
        Object {
          "marginRight": 6,
        },
      ]
    } />
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "column",
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#807F7F",
            "fontSize": 15,
          },
        ]
      }>
      Você
       pediu um(a)
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#807F7F",
          },
        ]
      }>
      foobarfoobarfoobarfoob...
    </Text>
  </View>
</View>
`;
